--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,25 @@
-click==6.6
-SqlAlchemy==1.1.2
-oauth2client
-requests
-Flask==0.11.1
-gunicorn==19.6.0
+autopep8==1.3.2
+backports.shutil-get-terminal-size==1.0.0
+certifi==2017.11.5
+chardet==3.0.4
+configparser==3.5.0
+enum34==1.1.6
+flake8==3.5.0
 httplib2==0.10.3
-itsdangerous==0.24
-Jinja2==2.8
-lpthw.web==1.1
-macholib==1.5.1
+idna==2.5
+mccabe==0.6.1
+pathlib==1.0.1
+pep8==1.7.0
+pew==1.1.1
+pipenv==8.3.2
+psutil==5.3.1
+psycopg2==2.7.3.2
+pycodestyle==2.3.1
+pyflakes==1.6.0
+pyopenssl==17.0.0
+requests==2.18.4
+shutilwhich==1.1.0
+twilio==6.4.1
+urllib3==1.22
+virtualenv==15.1.0
+virtualenv-clone==0.2.6
