--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,10 @@ pyflakes==1.6.0
 pyopenssl==17.0.0
 requests==2.18.4
 shutilwhich==1.1.0
+SQLAlchemy==1.1.15
 twilio==6.4.1
 urllib3==1.22
 virtualenv==15.1.0
 virtualenv-clone==0.2.6
 Werkzeug==0.13
+
