--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,37 @@
 autopep8==1.3.2
 backports.shutil-get-terminal-size==1.0.0
-certifi==2022.12.7
+certifi==2023.11.17
 chardet==3.0.4
 click==6.7
 configparser==3.5.0
 enum34==1.1.6
 flake8==3.5.0
-Flask==1.0
+Flask==3.0.0
 gunicorn==19.7.1
 httplib2==0.19.0
 idna==2.5
 itsdangerous==0.24
 Jinja2==2.11.3
-MarkupSafe==1.0
+MarkupSafe==2.1.3
 mccabe==0.6.1
 pathlib==1.0.1
 pep8==1.7.0
-pew==1.1.1
+pew==1.2.0
 pipenv==8.3.2
-psutil==5.6.6
-psycopg2==2.7.3.2
+psutil==5.9.7
+psycopg2==2.9.9
 pycodestyle==2.3.1
 pyflakes==1.6.0
-pyopenssl==17.0.0
-requests==2.20.0
+pyopenssl==23.3.0
+requests2==2.16.0
 shutilwhich==1.1.0
 SQLAlchemy==1.3.0
 twilio==6.4.1
-urllib3==1.26.5
+urllib5==66.0.2
 virtualenv==15.1.0
 virtualenv-clone==0.2.6
-Werkzeug==0.15.3
+Werkzeug==3.0.1
 
+
+requests~=2.31.0
+oauthlib~=3.2.2
